[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/InGameUI/QbitViewSphereSelected.png" type="Texture" id=1]
[ext_resource path="res://assets/art/InGameUI/QbitViewBtMatrixSelected.png" type="Texture" id=2]
[ext_resource path="res://src/user_interface/QbitViewBt.gd" type="Script" id=3]

[node name="QbitViewBt" type="Control"]
margin_right = 484.0
margin_bottom = 79.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatrixSelectBt" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -24.0
margin_top = -48.0
margin_right = 239.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatrixSelectedSprite" type="Sprite" parent="MatrixSelectBt"]
position = Vector2( 26, 49 )
scale = Vector2( 1, 1.17288 )
texture = ExtResource( 2 )
centered = false

[node name="SphereSelectBt" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 239.0
margin_top = -46.0
margin_right = 505.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SphereSelectedSprite" type="Sprite" parent="SphereSelectBt"]
position = Vector2( -237, 47 )
scale = Vector2( 1, 1.19209 )
texture = ExtResource( 1 )
centered = false
[connection signal="pressed" from="MatrixSelectBt" to="." method="selectMatrixView"]
[connection signal="pressed" from="SphereSelectBt" to="." method="selectSphereView"]
